# COP6616-Dining-Philosophers

./: .gitignore  CMakeLists.txt  README.md  README.txt
Assignment1/: CMakeLists.txt
Assignment1/headers/: Prime.h  SequentialSolution.h  SiloSolution.h  Solution.h  TicketSolution.h
Assignment1/src/: SequentialSolution.cpp  SiloSolution.cpp  Solution.cpp  TicketSolution.cpp  main.cpp
DiningPhilosophers/: CMakeLists.txt
DiningPhilosophers/headers/: Host.h  Philosopher.h  Solution1.h  Solution2.h  Solution3.h
DiningPhilosophers/src/: Host.cpp  Solution1.cpp  Solution2.cpp  Solution3.cpp  Solution4.cpp
PrimeNumbers/: CMakeLists.txt
PrimeNumbers/headers/: Prime.h  SiloSolution.h  Solution.h
PrimeNumbers/src/: SequentialSolution.cpp  SiloSolution.cpp  Solution.cpp  TicketSolution.cpp  main.cpp
